fixed spacing

--- a/css/resources.css
+++ b/css/resources.css
@@ -32,7 +32,7 @@
 
 .tabs {
     position: absolute;
-    top: -32px;
+    top: -30px;
     left: 0;
 }
 
@@ -209,6 +209,7 @@
 /*}*/
 
 .resource {
+    box-sizing: content-box;
     width: 150px;
     height: 150px;
     margin: 10px;
@@ -337,6 +338,7 @@
 }
 
 .guide {
+    box-sizing: content-box;
     display: inline-block;
     height: 85px;
     width: 220px;
@@ -419,7 +421,7 @@
 
 .resource-input-filter {
     position: absolute;
-    top: 35px;
+    top: 15px;
     right: 25px;
     
 }
